# tsa-forecasting

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: refs.bib  task_paper.py  tsaf.tex  tsaf_pres.tex
src/tsaf/: __init__.py
src/tsaf/analysis/: forecast.py  model.py  predict.py  task_analysis.py
src/tsaf/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_management.py
src/tsaf/final/: __init__.py  plot.py  task_final.py
tests/analysis/: __init__.py  test_forecast.py  test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
