[metadata]
name = tsaf
description = Time Series Forecasting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/julioalonzom/tsaf
author = Julio Alonzo
author_email = j.c.alonzo.muller@gmail.com
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/julioalonzom/tsaf
    Documentation = https://github.com/julioalonzom/tsaf
    Github = https://github.com/julioalonzom/tsaf
    Tracker = https://github.com/julioalonzom/tsaf/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/tsaf/_version.py
